--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta name="description" content="Mon portfolio, un projet vue racontant mon parcours">
+    <title>Mon portfolio</title>
   </head>
   <body>
     <div id="app"></div>
